# stackup-teamplate

./: .gitignore  README.md  ap1.py  app.py  cart.html  category.html  data.db  hello.txt  historyque.txt  home.css  home.html  index.html  main.html  package-lock.json  package.json  products-details html.html  products.html  project.html  quiz.html  sign.html  style.css  style1.css  test.html  todoH.html  todoList.js  user.txt
API/: index.js  routes.js
API/models/: User.js  post.js
Backend/: index.js
CLIENT/react-app/: package-lock.json  package.json
Eve-fests_web/Frontend_Eve-fests/: React4Frontend
Reactproject123/: Reactapp
Wecontact/: index.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js
Wecontact/models/: admin.js  (+2 more)
back-end/: package-lock.json  package.json  server.js
client/: package-lock.json  package.json  tailwind.config.js  vercel.json
css/: file-e77.css
docs/: login.html.html  model.html  reg.html
ecommerce/: app.js  package-lock.json  package.json
front-end/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/: index.html  package-lock.json  package.json
quizz/: db.sqlite3  manage.py
resources/: GD  General Discription  README.md
server/: .env
src/: App.jsx  App.tsx  ProtectedRoute.jsx  UserAuthContext.jsx  firebase.js  home.css  home.jsx  login.css  login.jsx  main.tsx  reg1.avif  register.css  register.jsx
task_management/: db.sqlite3  manage.py
tm-app/: package-lock.json  package.json
web_server/: Cargo.toml
web_server/src/: extensions.rs  main.rs  structs.rs
(+216 files in other folders)
